--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "strapi",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
+    "prebuild": "cd ./src/plugins/data-exporter && npm run build",
     "build": "strapi build",
+    "predevelop": "cd ./src/plugins/data-exporter && npm run build",
+    "develop": "strapi develop",
+    "prerailway": "cd ./src/plugins/data-exporter && npm run build",
+    "railway": "railway run yarn run develop --watch-admin",
+    "start": "strapi start",
     "strapi": "strapi"
   },
   "dependencies": {
@@ -20,14 +28,10 @@
     "react-router-dom": "^5.3.4",
     "styled-components": "^5.3.11"
   },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "35d7a084-3088-4d0b-869e-f503693ee8e5"
-  },
   "engines": {
     "node": "20"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "35d7a084-3088-4d0b-869e-f503693ee8e5"
+  }
 }
