--- a/src/plugins/data-exporter/package.json
+++ b/src/plugins/data-exporter/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@strapi/typescript-utils": "^4.6.0",
+    "@types/koa": "^2.15.0",
     "@types/react": "^17.0.53",
     "@types/react-dom": "^18.0.28",
     "@types/react-router-dom": "^5.3.3",
