--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "strapi build ",
+    "buildPlugin": "cd ./src/plugins/data-exporter && npm run build",
     "develop": "strapi develop",
     "prerailway": "cd ./src/plugins/data-exporter && npm run build",
     "railway": "railway run yarn run develop --watch-admin",
