--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
+    "sqlite3": "^5.1.7",
     "styled-components": "^5.3.11"
   },
   "engines": {
