Refactor package.json and database configuration files

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "strapi build ",
     "buildPlugin": "cd ./src/plugins/data-exporter && npm run build",
     "predevelop": "cd ./src/plugins/data-exporter && npm run build",
-    "develop": "strapi develop",
+    "develop": "strapi develop --watch-admin",
     "prerailway": "cd ./src/plugins/data-exporter && npm run build",
     "railway": "railway run yarn run develop --watch-admin",
     "start": "strapi start",
